re PR middle-end/46667 (-freorder-blocks-and-partition -g failed and libstdc++ builds for arm-eabi are broken.)

PR middle-end/46667
	* varasm.c (assemble_start_function): Do not call resolve_unique_section.
	* cfgexpand.c (gimple_expand_cfg): Resolve it here.

From-SVN: r167795